--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -295,13 +295,14 @@
             </figure>
 
             <figure>
-                <a b href="https://www.photopea.com/"><i>Photopea</i></a>
-                <a href="http://www.colourlovers.com/palettes/most-loved/all-time/meta">Colour♥</a>
+                <a href="http://www.colourlovers.com/palettes/most-loved/all-time/meta">Colour ♥</a>
+                <a href="http://veli.ee/colorpedia/"><i>Colorpedia</i></a>
             </figure>
 
             <section c-hq>
                 <figure>
-                    <a b c href="https://webmaker.app/app/">Editor</a>
+                    <a b c href="https://webmaker.app/app/">HTML Editor</a>
+                    <a b href="https://www.photopea.com/"><i>Photopea</i></a>
                 </figure>
             </section>
 
@@ -310,7 +311,7 @@
                 <figure>
                     <a min mini href="http://jsbin.com/?html,output"><i>jsBin</i></a>
                     <a min mini href="http://jsfiddle.net/q5frq7ds/"><i>jsfiddle</i></a>
-                    <a b href="https://htmlg.com/html-editor/">html editor</a>
+                    <a b href="https://htmlg.com/html-editor/">html wysiwyg</a>
                 </figure>
                 <a href="https://www.10bestdesign.com/dirtymarkup/"><i>Beautify</i></a>
                 <a href="https://www.diffchecker.com/"><i>Diff checker</i></a>
