--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -277,7 +277,10 @@
                 <a href="http://caniuse.com/"><i>Caniuse</i></a>
                 <a href="https://www.w3counter.com/globalstats.php"><i>Global stats</i></a>
             </figure>
-            <a href="http://b64.io/" class="red"><i>base64 enc</i></a>
+            <figure>
+                <a href="https://yoksel.github.io/url-encoder/"><i>SVG→CSS-encoder</i></a>
+                <a href="http://b64.io/" class="red"><i>base64</i></a>
+            </figure>
             <figure>
                 <a href="https://jakearchibald.github.io/svgomg/">Optimize SVG</a>
                 <a href="https://tinypng.com/">PNG</a>
