--- a/appZapp/design-swed.html
+++ b/appZapp/design-swed.html
@@ -77,6 +77,24 @@
 </head>
 <body class="body-wrap design-template--swed">
 
+    <section class="swd-section bg-aaa">
+        <div class="title">swd section</div>
+        <div class="title">swd section</div>
+    </section>
+    <section class="swd-section bg-bbb">
+        <div class="title">swd section</div>
+        <div class="title">swd section</div>
+    </section>
+    <section class="swd-section bg-ccc">
+        <div class="title">swd section</div>
+        <div class="title">swd section</div>
+    </section>
+    <section class="swd-section bg-ddd">
+        <div class="title">swd section</div>
+        <div class="title">swd section</div>
+    </section>
+
+
     <section class="swed-screen">
         <div class="swed-double-sticker-wrap">
             <div class="swed-sticker">
