the holy albatross

--- a/appZapp/design-swed.html
+++ b/appZapp/design-swed.html
@@ -77,6 +77,13 @@
 </head>
 <body class="body-wrap design-template--swed">
 
+    <div class="albatross">
+        <div>some loooong label</div>
+        <div>short label</div>
+        <div>another short</div>
+        <div>label</div>
+    </div>
+
     <section class="swd-section bg-aaa">
         <div class="title">swd section</div>
         <div class="title">swd section</div>
