swd- unresolved z-index

--- a/appZapp/design-swed.html
+++ b/appZapp/design-swed.html
@@ -133,6 +133,132 @@
     </section>
 
     <section class="swed-screen">
+
+        <h2 class="title">Unresolved z-index</h2>
+
+        <nav class="swed-group swd-menu-row">
+
+            <div class="swd-dropmenu">
+                <button class="label">
+                    <div>About Us</div>
+                </button>
+                <div class="droplist">
+                    <ul>
+                        <li><span>First item</span></li>
+                        <li><span>Second item</span></li>
+                        <li><span>Third long size caption</span></li>
+                        <li><span>Last item</span></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="swd-dropmenu">
+                <button class="label">
+                    <div>Our Products</div>
+                </button>
+                <div class="droplist">
+                    <ul>
+                        <li><span>First item</span></li>
+                        <li><span>Second item</span></li>
+                        <li><span>Third long size caption</span></li>
+                        <li><span>Last item</span></li>
+                        <li><span>First item</span></li>
+                        <li><span>Second item</span></li>
+                        <li><span>Third long size<br>caption is longer</span></li>
+                        <li><span>Last item</span></li>
+                        <li><span>Last item</span></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="swd-dropmenu">
+                <button class="label">
+                    <div>Is Active</div>
+                </button>
+                <div class="droplist">
+                    <ul>
+                        <li><span>One item</span></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="swd-button">
+                <a href="#">Contacts</a>
+            </div>
+
+        </nav>
+
+        <nav class="swd-section use-color-model color-model--classic">
+
+            <div class="swd-dropmenu">
+                <button class="label">
+                    <div>About Us</div>
+                </button>
+                <div class="droplist">
+                    <ul>
+                        <li><span>First item</span></li>
+                        <li><span>Second item</span></li>
+                        <li><span>Third long size caption</span></li>
+                        <li><span>Last item</span></li>
+                    </ul>
+                </div>
+            </div>
+
+        </nav>
+
+        <nav class="swed-group swd-menu-row">
+
+            <div class="swd-dropmenu">
+                <button class="label">
+                    <div>About Us</div>
+                </button>
+                <div class="droplist">
+                    <ul>
+                        <li><span>First item</span></li>
+                        <li><span>Second item</span></li>
+                        <li><span>Third long size caption</span></li>
+                        <li><span>Last item</span></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="swd-dropmenu">
+                <button class="label">
+                    <div>Our Products</div>
+                </button>
+                <div class="droplist">
+                    <ul>
+                        <li><span>First item</span></li>
+                        <li><span>Second item</span></li>
+                        <li><span>Third long size caption</span></li>
+                        <li><span>Last item</span></li>
+                        <li><span>First item</span></li>
+                        <li><span>Second item</span></li>
+                        <li><span>Third long size<br>caption is longer</span></li>
+                        <li><span>Last item</span></li>
+                        <li><span>Last item</span></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="swd-dropmenu">
+                <button class="label">
+                    <div>Is Active</div>
+                </button>
+                <div class="droplist">
+                    <ul>
+                        <li><span>One item</span></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="swd-button">
+                <a href="#">Contacts</a>
+            </div>
+
+        </nav>
+
+
         <div class="swed-group">
             <div class="swed-dropdown has-hover-action">
                 <div class="label">
@@ -176,6 +302,8 @@
                 </div>
             </div>
         </div>
+
+
     </section>
 
     <section class="swed-screen">
