--- a/appZapp/components.html
+++ b/appZapp/components.html
@@ -110,31 +110,23 @@
         </header>
         <code class="codeblock">/* samples */
         </code>
+        <hr>
     </article>
 
+    <style>
+
+    </style>
 
     <article class="zetka">
         <header class="chapter-title">
-            <h2>Swed Design</h2>
+            <h2>Icons</h2>
         </header>
+        <div class="has-icon email">email</div>
+        <div class="has-icon phone">phone</div>
+        <div class="has-icon skype">skype</div>
     </article>
 
-    <section class="swed-welcome">
-        <header  class="head" hidden>1</header>
-        <section class="side">2</section>
-        <section class="main">3</section>
-        <footer  class="foot">4</footer>
-    </section>
 
-
-    <article class="zetka">
-        <header class="chapter-title">
-            <h2>Eastside</h2>
-        </header>
-        <aside class="eastside">
-            bar
-        </aside>
-    </article>
 
 
     <article id="Sakura" chapter class="sakura sakura-content">
