icons with data:image

--- a/appZapp/components.html
+++ b/appZapp/components.html
@@ -119,11 +119,20 @@
 
     <article class="zetka">
         <header class="chapter-title">
-            <h2>Icons</h2>
+            <h2>Icons with data:image</h2>
+            <p>Hardcoded color, no state changes</p>
         </header>
-        <div class="has-icon email">email</div>
-        <div class="has-icon phone">phone</div>
-        <div class="has-icon skype">skype</div>
+        <section class="text-is-bigger">
+            <div class="has-icon email">email</div>
+            <div class="has-icon phone">phone</div>
+            <div class="has-icon skype">skype</div>
+            <span class="has-icon facebook"></span>
+            <span class="has-icon linkedin"></span>
+            <span class="has-icon twitter"></span>
+            <span class="has-icon instagram"></span>
+            <span class="has-icon youtube"></span>
+            <span class="has-icon github"></span>
+        </section>
     </article>
 
 
