prepare for html 5+

--- a/appZapp/app-seed.html
+++ b/appZapp/app-seed.html
@@ -1,4 +1,4 @@
-<!doctype html><!-- app7001-Zapp :: 2019.5.8 -->
+<!doctype html><!-- app7001-Zapp :: 2019.6.28 -->
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -57,17 +57,21 @@
 
     <!-- ========================================= APP CUSTOM -->
 
-    <link
-        href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
-        crossorigin="anonymous" rel="stylesheet">
+    <!--
+        1. scripts to body
+        1.1 script head rules/blastula
+        1.2 app→zapp naming
+      -->
 
     <!-- ========================================== ʕ⊙ᴥ⊙ʔ = -->
     <!-- ========================================= END HEAD -->
 </head>
 <body class="body-wrap design-template">
 
-
+    <header></header>
+      <main></main>
+     <aside></aside>
+    <footer></footer>
 
 </body>
 </html>
