--- a/zlhome/webhome.html
+++ b/zlhome/webhome.html
@@ -129,7 +129,7 @@
             <a href="http://geacron.com/home-en/" class=""><i>History Atlas</i></a>
         </section>
         <section c-eg3>
-            <span a c>Ss ▲▼◄► ‹› ←→ ↔ ‖</span>
+            <span a c>Ss ▲▼◄► ‹› ←→ ↔ ⚠ ☑</span>
             <span a c>Ss ※⁜⁕★⋆∘⚙ ∗⁎ ⁑ ⁂</span>
             <span a c>
                 <a href="https://en.wikipedia.org/wiki/List_of_Unicode_characters">W</a>
