--- a/appZapp/design-eg.html
+++ b/appZapp/design-eg.html
@@ -14,7 +14,7 @@
 
     <style> /* ༼°▽°༽ boot style */
         body    { width: 100%; height: auto; overflow: hidden; }
-        body    { font-size: 16px; }
+        body    { font-size: 20px; }
         img,svg { max-width: 100% }
     </style>
 
@@ -264,6 +264,68 @@
 </head>
 <body class="body-wrap design-template">
 
+    <style>
+        .article-grid {
+            --grid-base--column-gap:     1em;
+            --grid-base--row-gap:        1em;
+            --grid-base--sidenote-width: 15em;
+            --grid-base--content-width:  35em;
+        }
+    </style>
+
+
+    <article class="article-grid">
+        <header>
+            <h1 class="big-title">Reminiscing About G2E Asia Awards 2019</h1>
+        </header>
+        <div class="content-block">
+            <p>Events like G2E Asia provide a fantastic opportunity for networking — one of the key aspects of expanding your business. Apart from being able to explore new possibilities, casino operators and solution providers attending the event are also able to build new partnerships and find new business opportunities.
+            The expo is a three-day-long event which features an exhibit where providers can showcase their newest innovative gaming services and products, as well as plenty of events that increase the number of networking opportunities. G2E Asia was first held in June 2007, and today, after more than a decade of unique networking opportunities and quality exhibitions, it is one of the most reputable expo events in the gaming industry.</p>
+
+            <p>However, what makes G2E Asia truly special is the rewards event. Considering the event’s long history and prestige, the awards presented at G2E Asia are considered the most reputable ones in the industry.</p>
+
+            <p>The event gathers some of the most prominent names in the industry from various organisations. The official judging panel is comprised of 50 judges who ensure the whole process is legitimate and that all rewards are well-deserved.</p>
+
+            <p>This year at G2E Asia Awards, SoftGamings was nominated in the Best B2B Digital Product Solution category. Sadly, we weren’t able to secure the first place and the award, but even being shortlisted at such an important event is an impressive feat. Moreover, recognition such as this one is an excellent incentive, and our team at SoftGamings is motivated more than ever to continue to work hard and offer high-quality solutions to anyone looking to expand their business.</p>
+        </div>
+        <div class="eastnote">
+            <p>This year at G2E Asia Awards, SoftGamings was nominated in the Best B2B Digital Product Solution category. Sadly, we weren’t able to secure the first place and the award, but even being shortlisted at such an important event is an impressive feat. Moreover, recognition such as this one is an excellent incentive, and our team at SoftGamings is motivated more than ever to continue to work hard and offer high-quality solutions to anyone looking to expand their business.</p>
+        </div>
+        <div class="article-block has-paddings" style="background:pink;">
+            <p>The event gathers some of the most prominent names in the industry from various organisations. The official judging panel is comprised of 50 judges who ensure the whole process is legitimate and that all rewards are well-deserved.</p>
+        </div>
+
+        <p>The event gathers some of the most prominent names in the industry from various organisations. The official judging panel is comprised of 50 judges who ensure the whole process is legitimate and that all rewards are well-deserved.</p>
+
+        <p>This year at G2E Asia Awards, SoftGamings was nominated in the Best B2B Digital Product Solution category. Sadly, we weren’t able to secure the first place and the award, but even being shortlisted at such an important event is an impressive feat. Moreover, recognition such as this one is an excellent incentive, and our team at SoftGamings is motivated more than ever to continue to work hard and offer high-quality solutions to anyone looking to expand their business.</p>
+
+        <div class="article-grid" style="background:wheat; padding: 1em 0;">
+            <div class="westnote">
+                <p>However, what makes G2E Asia truly special is the rewards event.</p>
+            </div>
+            <div class="content-block">
+                <p>Events like G2E Asia provide a fantastic opportunity for networking — one of the key aspects of expanding your business. Apart from being able to explore new possibilities, casino operators and solution providers attending the event are also able to build new partnerships and find new business opportunities.
+                The expo is a three-day-long event which features an exhibit where providers can showcase their newest innovative gaming services and products, as well as plenty of events that increase the number of networking opportunities. G2E Asia was first held in June 2007, and today, after more than a decade of unique networking opportunities and quality exhibitions, it is one of the most reputable expo events in the gaming industry.</p>
+
+                <div class="westnote">
+                    <p>However, what makes G2E Asia truly special is the rewards event.</p>
+                </div>
+
+                <p>However, what makes G2E Asia truly special is the rewards event. Considering the event’s long history and prestige, the awards presented at G2E Asia are considered the most reputable ones in the industry.</p>
+
+                <p>The event gathers some of the most prominent names in the industry from various organisations. The official judging panel is comprised of 50 judges who ensure the whole process is legitimate and that all rewards are well-deserved.</p>
+
+                <p>This year at G2E Asia Awards, SoftGamings was nominated in the Best B2B Digital Product Solution category. Sadly, we weren’t able to secure the first place and the award, but even being shortlisted at such an important event is an impressive feat. Moreover, recognition such as this one is an excellent incentive, and our team at SoftGamings is motivated more than ever to continue to work hard and offer high-quality solutions to anyone looking to expand their business.</p>
+            </div>
+            <div class="eastnote">
+                <p>This year at G2E Asia Awards, SoftGamings was nominated in the Best B2B Digital Product Solution category. Sadly, we weren’t able to secure the first place and the award, but even being shortlisted at such an important event is an impressive feat. Moreover, recognition such as this one is an excellent incentive, and our team at SoftGamings is motivated more than ever to continue to work hard and offer high-quality solutions to anyone looking to expand their business.</p>
+            </div>
+        </div>
+
+    </article>
+
+
+    <hr>
 
     <div class="casionis">
         <div class="big-title">Casionis</div>
