article-grid sizes

--- a/appZapp/design-swed.html
+++ b/appZapp/design-swed.html
@@ -76,6 +76,57 @@
 </head>
 <body class="body-wrap design-template--swed">
 
+    <div class="swed-screen color-box colors-as-primary">
+
+        <section class="article-grid">
+
+            <p>Карбон — второе название каменноугольного периода в истории Земли. В те годы ещё не появились динозавры, но уже обитали разнообразные амфибии и рептилии. Суша была покрыта тёплыми болотами и хвойными лесами. Старые деревья погружались в болотную воду и медленно превращались в каменный уголь, который через триста миллионов лет будут откапывать шахтёры.</p>
+
+            <p>Тропинка ведущая к болотам становилась всё меньше, пока совсем не растворилась в лужах с зелёной ряской. Лужи продолжались до самого горизонта, с редкими островками, покрытыми кустами и деревьями, среди которых ползали рептилии.</p>
+
+            <div class="article-block text-is-larger color-box colors-as-highlight has-paddings">
+                <p>— Здесь живут примитивы: Булеаны, Стринги, Интеджеры и прочие. Все выглядят, как ящерицы разных форм и размеров. Нам нужна небольшая ящерка Стринг. Она умеет запоминать имя и хранить его вечно.</p>
+            </div>
+
+            <p>— А огромный, хищный Массив нам совсем не нужен.</p>
+
+            <p>Король Апп показал на огромную ящерицу в глубине болот — размером с многоэтажный дом.</p>
+
+            <div class="article-block text-is-larger color-box colors-as-secondary has-paddings">
+                <p>— Поэтому меняем планы. Поиск имени переносим, сначала нам нужна армия. Для этого вернёмся в горы и найдём деревню с местными жителями.</p>
+            </div>
+
+            <p>Изменения в планах очень понравились коту, но девочка не могла допустить переноса столь важной для неё мисиии.</p>
+
+            <p>— Нам нужна армия?</p>
+
+            <p>— Определённо да! Отряд из пятидесяти дизайнеров, чтобы отогнать Массив.</p>
+
+            <p>— Почему пятьдесят?</p>
+
+            <p>— Для надёжного эффекта. Представь, как выглядят пятьдесят дизайнеров, бегущих на тебя с криком «сейчас поправлю!». Такая сила способна прогнать ящерку размером с Ост-Индийскую компанию.</p>
+
+        </section>
+
+    </div>
+    <div class="swed-screen color-box colors-as-secondary">
+
+        <section class="article-grid">
+
+            <p>Карбон — второе название каменноугольного периода в истории Земли. В те годы ещё не появились динозавры, но уже обитали разнообразные амфибии и рептилии. Суша была покрыта тёплыми болотами и хвойными лесами. Старые деревья погружались в болотную воду и медленно превращались в каменный уголь, который через триста миллионов лет будут откапывать шахтёры.</p>
+
+            <p>Тропинка ведущая к болотам становилась всё меньше, пока совсем не растворилась в лужах с зелёной ряской. Лужи продолжались до самого горизонта, с редкими островками, покрытыми кустами и деревьями, среди которых ползали рептилии.</p>
+
+            <p>— Здесь живут примитивы: Булеаны, Стринги, Интеджеры и прочие. Все выглядят, как ящерицы разных форм и размеров. Нам нужна небольшая ящерка Стринг. Она умеет запоминать имя и хранить его вечно.</p>
+
+            <p>— А огромный, хищный Массив нам совсем не нужен.</p>
+
+            <p>Король Апп показал на огромную ящерицу в глубине болот — размером с многоэтажный дом.</p>
+
+        </section>
+
+    </div>
+
     <div class="albatross">
         <div>some loooong label</div>
         <div>short label</div>
