refresh html markup

--- a/appZapp/content-meta.html
+++ b/appZapp/content-meta.html
@@ -15,12 +15,12 @@
     <meta name="author"      content="xoxox_ZL_xoxox" />
 
     <!-- ## MICRODATA -->
-    <meta property="og:title"        content="xoxox" />
-    <meta property="og:description"  content="xoxox" />
-    <meta property="og:url"          content="xoxox" />
-    <meta property="og:image"        content="xoxox" />
-    <meta property="og:image:width"  content="xoxox" />
-    <meta property="og:image:height" content="xoxox" />
+    <meta property="og:title"        content="" />
+    <meta property="og:description"  content="" />
+    <meta property="og:url"          content="landing_url" />
+    <meta property="og:image"        content="image_url" />
+    <meta property="og:image:width"  content="2000" />
+    <meta property="og:image:height" content="1000" />
     <meta property="og:type"         content="article" />
     <meta property="og:locale"       content="en_US" />
     <!-- / -->
@@ -30,8 +30,8 @@
     <meta name="theme-color" content="#E08E79">
     <meta name="msapplication-TileColor" content="#E08E79">
     <meta name="msapplication-TileImage" content="app/favicons/144x144.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="app/favicons/180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="app/favicons/192x192.png">
+    <link href="app/favicons/180x180.png" sizes="180x180" rel="apple-touch-icon">
+    <link href="app/favicons/192x192.png" sizes="192x192" rel="icon" type="image/png">
 
     <!-- ## LINK NAV -->
     <link rel="index"    href="xoxox_indexLINK_xoxox">
@@ -40,6 +40,15 @@
     <link rel="last"     href="xoxox_lastLINK_xoxox">
     <link rel="prev"     href="xoxox_prevLINK_xoxox">
     <link rel="next"     href="xoxox_nextLINK_xoxox">
+
+    <!-- Social links (displayed in gogle search view)
+         available types: https://schema.org/Thing  -->
+
+    <span itemscope itemtype="http://schema.org/Organization">
+      <link itemprop="url" href="http://www.your-company-site.com"/>
+      <a itemprop="sameAs" href="http://www.facebook.com/your-company">FB</a>
+      <a itemprop="sameAs" href="http://www.twitter.com/YourCompany">Twitter</a>
+    </span>
     <!-- / -->
 
     <!-- =================================================== ʕ⊙ᴥ⊙ʔ  -->
